@@ -1,3 +1,8 @@
+2017-07-06  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
+
+	* coders/png.c: Consolidate JNG cleanup into a new DestroyJNG()
+	function.
+
 2017-07-05  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
 
 	* coders/png.c: prevent a crash due to zero-length color_image
